--- a/src/stylesheets/components/superorganisms.scss
+++ b/src/stylesheets/components/superorganisms.scss
@@ -5,12 +5,10 @@
 .S_ArticlesBody {
   display: flex;
   flex-direction: column;
-  margin: 193px 0px 200px;
+  margin: 190px auto 200px;
   gap: 80px;
 
-  position: relative;
-
-  align-items: center;
+  width: 1180px;
 
   .C_CraftsCards {
     display: flex;
@@ -20,10 +18,10 @@
     flex-direction: row;
     align-items: top;
 
-    width: 1252px;
+    max-width: 1180px;
 
-    grid-column-gap: 37px;
-    grid-row-gap: 37px;
+    grid-column-gap: 36px;
+    grid-row-gap: 36px;
   }
 }
 
@@ -33,7 +31,7 @@
 // Страницы ремёсел
 
 .S_CraftPage {
-  margin: 0 auto;
+  margin: 90px auto 240px;
   display: flex;
   flex-direction: column;
 
@@ -52,7 +50,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      margin: 140px 0px 240px 0px;
+      margin-top: 140px;
     }
 
     .W_CraftHistorySticker {
@@ -81,6 +79,28 @@
 //
 //
 //
+//Модальные окна
+.S_Modal {
+  display: none;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+
+  &.visible {
+    display: block;
+  }
+
+  .W_ModalFader {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+}
+
+//
+//
+//
 //start- стартовый экран
 .S_MainPage {
   display: flex;
@@ -98,4 +118,13 @@
     align-items: center;
     gap: 40px;
   }
+}
+
+//
+//
+//
+//
+.S_MapPage {
+  width: 100vw;
+  height: 100vh;
 }
