--- a/src/stylesheets/components/atoms.scss
+++ b/src/stylesheets/components/atoms.scss
@@ -14,8 +14,8 @@
   color: var(--white);
 }
 
-.A_HeaderSections,
-.A_FooterSections {
+.A_HeaderSection,
+.A_FooterSection {
   font-family: 'PP Neue Montreal';
   font-style: normal;
   font-weight: 400;
@@ -48,26 +48,70 @@
   }
 }
 
-.A_SectionTitles {
+.A_BackButton {
+  position: absolute;
+  top: 50px;
+  left: 0px;
+
+  font-family: 'PP Neue Machina Plain Regular';
+  font-style: italic;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 25px;
+
+  color: var(--white);
+  opacity: 0.4;
+
+  transition: 0.5s;
+
+  cursor: pointer;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.A_SectionTitle {
   font-family: 'PP Neue Machina';
   font-style: normal;
   font-weight: 800;
   font-size: 61px;
   line-height: 63px;
 
-  color: var(--white);
+  color: var(--black);
+
+  background-repeat: no-repeat;
+
+  &.-Crafts {
+    width: 700px;
+    height: 82px;
+    background-image: url('./images/crafts/shape_title.svg');
+    padding-left: 8px;
+    padding-top: 12px;
+  }
+
+  &.-Articles {
+    width: 648px;
+    height: 82px;
+    background-image: url('./images/articles/shape_title.svg');
+    padding-left: 9px;
+    padding-top: 11px;
+  }
+
+  &.-Map {
+    width: 510px;
+    height: 80px;
+    background-image: url('./images/map/shape_title.svg');
+    padding-left: 8px;
+    padding-top: 8px;
+  }
 }
 
 .A_TagButton {
   box-sizing: border-box;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 6px 14px 8px;
-
   height: 36px;
+
+  padding: 6px 14px 8px;
 
   border: 1.5px solid;
   border-radius: 14px;
@@ -88,7 +132,8 @@
   cursor: pointer;
 
   &:hover {
-    background-color: #6a6a6a;
+    background-color: var(--lightgrey);
+    border-color: var(--lightgrey);
   }
 
   &.active {
@@ -97,7 +142,8 @@
   }
 }
 
-.A_TagOptionsText {
+.A_TagOptionsTextHide,
+.A_TagOptionsTextShow {
   font-family: 'PP Neue Machina Plain Regular';
   font-style: normal;
   font-weight: 400;
@@ -110,34 +156,40 @@
 
   transition: 0.5s;
 
+  cursor: pointer;
+
   &:hover {
     color: var(--white);
   }
 }
 
 .A_CraftsCardPic {
-  img {
-    height: 279px;
-    width: 279px;
+  width: 368px;
+  height: 290px;
+  box-sizing: border-box;
 
-    border: 3px solid;
-    border-radius: 26px;
-    border-color: var(--white);
+  border: 2px solid;
+  border-radius: 26px;
+  border-color: var(--white);
+
+  background-repeat: no-repeat;
+  background-position: center center;
+  object-fit: cover;
+
+  &:hover {
+    border: 4px solid;
   }
 }
 
 .A_CraftsCardTitle {
-  display: flex;
-
-  position: relative;
-  width: 239px;
-  max-height: 44px;
+  width: 316px;
+  max-height: 48px;
 
   font-family: 'PP Neue Machina';
   font-style: normal;
   font-weight: 800;
-  font-size: 21px;
-  line-height: 22px;
+  font-size: 23px;
+  line-height: 24px;
 
   color: var(--white);
 }
@@ -148,6 +200,12 @@
 // Страницы ремёсел
 
 .A_CraftLeadTitle {
+  font-family: 'PP Neue Machina';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 67px;
+  line-height: 61px;
+
   background-repeat: no-repeat;
 
   &.-Uelen-bone-carving {
@@ -179,9 +237,6 @@
   color: var(--white);
 
   box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
   padding: 7px 14px 5px;
 
   border: 1px solid;
@@ -190,6 +245,8 @@
 
   opacity: 0.5;
   transition: 0.2s;
+
+  cursor: pointer;
 
   &:hover {
     opacity: 1;
@@ -221,14 +278,8 @@
 
   color: var(--white);
 
-  margin-bottom: 16px;
-
   &.-Left100 {
-    margin: 0px 0px 40px 100px;
-  }
-
-  &.-Padd0 {
-    margin-bottom: 0px;
+    margin-left: 100px;
   }
 }
 
@@ -243,6 +294,10 @@
 
   &.-w580 {
     width: 580px;
+  }
+
+  &.-w480 {
+    width: 480px;
   }
 }
 
@@ -279,20 +334,25 @@
   line-height: 25px;
 
   color: var(--white);
-
-  padding: 0px 0px 12px;
 }
 
-.A_CraftBodyListItems {
+.A_CraftBodyListItem {
   font-family: 'PP Neue Montreal';
   font-style: normal;
   font-weight: 400;
   font-size: 21px;
-  line-height: 36px;
+  line-height: 100%;
+
+  margin-left: 10px;
+
+  list-style-type: disc;
+  list-style-position: inside;
 
   color: var(--white);
 
-  padding: 0 0 0 10px;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .A_TeaserCardTitle {
@@ -351,6 +411,14 @@
 //
 //Start- стартовый экран
 .A_MainPageLogo {
+  font-family: 'PP Neue Machina';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 110px;
+  line-height: 100px;
+
+  color: var(--black);
+
   background-repeat: no-repeat;
 
   width: 552px;
@@ -372,143 +440,110 @@
   color: var(--white);
 }
 
-.A_StickerDoll {
+.A_Sticker {
   position: absolute;
-  left: 22px;
-  top: 10px;
-  width: 237px;
-  height: 482px;
-  transform: rotate(-6deg);
 
   background-repeat: no-repeat;
   background-size: contain;
 
-  background-image: url('images/Start/StickerDoll.png');
-}
+  &.-Doll {
+    left: 12px;
+    top: 10px;
+    width: 237px;
+    height: 482px;
+    transform: rotate(-6deg);
 
-.A_StickerHohloma2 {
-  position: absolute;
-  left: 290px;
-  top: 82px;
-  width: 315px;
-  height: 273px;
-  transform: rotate(18deg);
+    background-image: url('images/Start/StickerDoll.png');
+  }
 
-  background-repeat: no-repeat;
-  background-size: contain;
+  &.-Hohloma2 {
+    left: 290px;
+    top: 82px;
+    width: 315px;
+    height: 273px;
+    transform: rotate(18deg);
 
-  background-image: url('images/Start/StickerHohloma2.png');
-}
+    background-image: url('images/Start/StickerHohloma2.png');
+  }
 
-.A_StickerHohloma {
-  position: absolute;
-  left: 300px;
-  top: 390px;
-  width: 170px;
-  height: 105px;
-  transform: rotate(10deg);
+  &.-Hohloma {
+    left: 300px;
+    top: 390px;
+    width: 170px;
+    height: 105px;
+    transform: rotate(10deg);
 
-  background-repeat: no-repeat;
-  background-size: contain;
+    background-image: url('images/Start/StickerHohloma.png');
+  }
 
-  background-image: url('images/Start/StickerHohloma.png');
-}
+  &.-Print {
+    left: 558px;
+    top: 348px;
+    width: 200px;
+    height: 132px;
+    transform: rotate(-28deg);
 
-.A_StickerPrint {
-  position: absolute;
-  left: 558px;
-  top: 348px;
-  width: 200px;
-  height: 132px;
-  transform: rotate(-28deg);
+    background-image: url('images/Start/StickerPrint.png');
+  }
 
-  background-repeat: no-repeat;
-  background-size: contain;
+  &.-Gzhel {
+    left: 652px;
+    top: 112px;
+    width: 210px;
+    height: 166px;
+    transform: rotate(5deg);
 
-  background-image: url('images/Start/StickerPrint.png');
-}
+    background-image: url('images/Start/StickerGzhel.png');
+  }
 
-.A_StickerGzhel {
-  position: absolute;
-  left: 652px;
-  top: 112px;
-  width: 210px;
-  height: 166px;
-  transform: rotate(5deg);
+  &.-Matreshka {
+    left: 840px;
+    top: 260px;
+    width: 151px;
+    height: 254px;
+    transform: rotate(10deg);
 
-  background-repeat: no-repeat;
-  background-size: contain;
+    background-image: url('images/Start/StickerMatreshka.png');
+  }
 
-  background-image: url('images/Start/StickerGzhel.png');
-}
+  &.-Flower {
+    left: 870px;
+    top: 30px;
+    width: 124px;
+    height: 128px;
 
-.A_StickerMatreshka {
-  position: absolute;
-  left: 840px;
-  top: 260px;
-  width: 151px;
-  height: 254px;
-  transform: rotate(10deg);
+    background-image: url('images/Start/StickerFlower.png');
+  }
 
-  background-repeat: no-repeat;
-  background-size: contain;
+  &.-Print2 {
+    left: 982px;
+    top: 180px;
+    width: 101px;
+    height: 101px;
+    transform: rotate(-142deg);
 
-  background-image: url('images/Start/StickerMatreshka.png');
-}
+    background-image: url('images/Start/StickerPrint2.png');
+  }
 
-.A_StickerFlower {
-  position: absolute;
-  left: 870px;
-  top: 30px;
-  width: 124px;
-  height: 128px;
+  &.-Hohloma3 {
+    left: 1020px;
+    top: 346px;
+    width: 126px;
+    height: 109px;
+    transform: rotate(74deg);
 
-  background-repeat: no-repeat;
-  background-size: contain;
+    background-image: url('images/Start/StickerHohloma3.png');
+  }
 
-  background-image: url('images/Start/StickerFlower.png');
-}
+  &.-Head {
+    left: 1140px;
+    top: 82px;
+    width: 216px;
+    height: 348px;
+    transform: rotate(7deg);
 
-.A_StickerPrint2 {
-  position: absolute;
-  left: 982px;
-  top: 180px;
-  width: 101px;
-  height: 101px;
-  transform: rotate(-142deg);
-
-  background-repeat: no-repeat;
-  background-size: contain;
-
-  background-image: url('images/Start/StickerPrint2.png');
-}
-
-.A_StickerHohloma3 {
-  position: absolute;
-  left: 1020px;
-  top: 346px;
-  width: 126px;
-  height: 109px;
-  transform: rotate(74deg);
-
-  background-repeat: no-repeat;
-  background-size: contain;
-
-  background-image: url('images/Start/StickerHohloma3.png');
-}
-
-.A_StickerHead {
-  position: absolute;
-  left: 1140px;
-  top: 82px;
-  width: 216px;
-  height: 348px;
-  transform: rotate(7deg);
-
-  background-repeat: no-repeat;
-  background-size: contain;
-
-  background-image: url('images/Start/StickerHead.png');
+    background-image: url('images/Start/StickerHead.png');
+  }
 }
 
 .A_MainPageSectionTitle {
@@ -536,6 +571,14 @@
 }
 
 .A_MainPageTeaserTitle {
+  font-family: 'PP Neue Machina';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 80px;
+  line-height: 82px;
+
+  color: var(--black);
+
   background-repeat: no-repeat;
 
   width: 267px;
@@ -543,6 +586,21 @@
   background-image: url('./images/Start/ArticleName.svg');
   padding-left: 8px;
   padding-top: 7px;
+}
+
+.A_MainPageButton {
+  font-family: 'PP Neue Montreal';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 43px;
+
+  color: var(--white);
+
+  padding: 11px 37px 10px 40px;
+
+  background: var(--black);
+  border-radius: 65px;
 }
 
 .A_MainPageTeaserButton {
@@ -568,5 +626,100 @@
   &:hover {
     color: var(--black);
     background-color: var(--white);
+  }
+}
+
+.A_SelectInput {
+  position: absolute;
+  font-family: 'PP Neue Montreal';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+
+  width: 650px;
+  height: 70px;
+  padding-left: 30px;
+
+  border-radius: 65px;
+  border: none;
+
+  outline: none;
+
+  &::placeholder {
+    font-family: 'PP Neue Montreal';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+
+.A_SelectOptionListItem {
+  font-family: 'PP Neue Machina';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 21px;
+  line-height: 22px;
+
+  color: var(--white);
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 30px;
+
+  width: 900px;
+  height: 70px;
+
+  background: var(--grey);
+  border: 2px solid var(--black);
+  border-radius: 65px;
+
+  cursor: pointer;
+
+  &:first-child {
+    margin-top: 10px;
+  }
+
+  &:last-child {
+    margin-bottom: 10px;
+  }
+
+  &:hover {
+    background-color: var(--darkgrey);
+  }
+
+  &.active {
+    color: var(--black);
+  }
+}
+
+//
+//
+//
+// Карта
+
+.A_MapModalToCraft {
+  font-family: 'PP Neue Montreal';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+
+  color: var(--white);
+
+  &:hover {
+    text-decoration-line: underline;
+  }
+}
+
+.A_StickerMap {
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  &.-UelenBear {
+    width: 320px;
+    height: 272px;
   }
 }
