--- a/src/stylesheets/components/molecules.scss
+++ b/src/stylesheets/components/molecules.scss
@@ -1,35 +1,31 @@
-.M_Header {
+.M_HeaderNav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 
-  position: relative;
   width: 1254px;
 
   &.-StartScreen {
     justify-content: flex-end;
   }
 
-  .C_HeaderNav {
+  .C_HeaderNavSections {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: flex-start;
     padding: 0px;
     gap: 80px;
-
-    position: relative;
   }
 }
 
-.M_Footer {
+.M_FooterNav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 
-  position: relative;
   width: 1254px;
 
   .C_FooterIconsSocialNetwork {
@@ -38,51 +34,45 @@
     justify-content: flex-end;
     align-items: flex-start;
     gap: 18px;
-
-    position: relative;
   }
 }
 
-.M_CraftsTagButtons {
+//
+//
+//
+// Карта
+
+.M_MapModalContent {
   display: flex;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  justify-content: flex-start;
   flex-direction: row;
   align-items: center;
+  gap: 14px;
+  margin: 84px 0px 0px 80px;
 
-  max-width: 700px;
-
-  grid-column-gap: 18px;
-  grid-row-gap: 18px;
+  .W_MapModalTexts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 26px;
+  }
 }
 
-.M_ArticlesTagButtons {
+//
+//
+//
+// Страница Библиотеки ремёсел
+
+.M_CraftsCard {
   display: flex;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  justify-content: flex-start;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-
-  max-width: 850px;
-
-  grid-column-gap: 18px;
-  grid-row-gap: 18px;
+  gap: 14px;
 }
 
 //
 //
 //
 // Страницы ремёсел
-
-.M_CraftsCard {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0px;
-  gap: 16px;
-}
 
 .M_CraftLeadDescription {
   display: flex;
@@ -99,6 +89,8 @@
 
     opacity: 0.5;
     transition: 0.2s;
+
+    cursor: pointer;
 
     &:hover {
       opacity: 1;
@@ -117,7 +109,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-top: 90px;
   gap: 20px;
 }
 
@@ -125,6 +116,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  gap: 16px;
 
   &.-Left100 {
     margin-left: 100px;
@@ -159,6 +151,7 @@
 .M_CraftBodyNote {
   display: flex;
   flex-direction: column;
+  gap: 12px;
 
   &.-w280 {
     width: 280px;
@@ -168,7 +161,14 @@
 .M_CraftBodyList {
   display: flex;
   flex-direction: column;
+  gap: 16px;
   margin-left: 100px;
+
+  .C_CraftBodyListItems {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+  }
 }
 
 .M_TeaserCard {
@@ -232,10 +232,29 @@
   gap: 12px;
 }
 
-//
-.M_GetKnow {
+.M_SelectField {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: relative;
+
+  width: 940px;
+  height: 74px;
+
+  background: var(--white);
+  border-radius: 65px;
+
+  .W_SelectButtons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+    top: 5px;
+    right: 5px;
+
+    position: absolute;
+  }
 }
-//
 
 .M_MainPageTeaserTexts {
   display: flex;
