--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -21,6 +21,13 @@
 }
 
 @font-face {
+  font-family: 'PP Neue Machina Plain Regular';
+  src: url('fonts/PPNeueMachina-PlainRegularItalic.otf') format('opentype');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
   font-family: 'PP Neue Machina Plain Light';
   src: url('fonts/PPNeueMachina-PlainLight.otf') format('opentype');
   font-weight: 100;
