--- a/src/stylesheets/components/quarks.scss
+++ b/src/stylesheets/components/quarks.scss
@@ -75,6 +75,12 @@
   }
 }
 
+.Q_SliderPic {
+  width: 880px;
+  height: 520px;
+  object-fit: cover;
+}
+
 .Q_CraftBodyImage {
   object-fit: cover;
 
