--- a/src/stylesheets/components/atoms.scss
+++ b/src/stylesheets/components/atoms.scss
@@ -267,6 +267,10 @@
   &.-w580 {
     width: 580px;
   }
+
+  &.-w680 {
+    width: 680px;
+  }
 }
 
 .A_CraftBodySubtitle {
@@ -299,6 +303,14 @@
   &.-w480 {
     width: 480px;
   }
+
+  &.-w780 {
+    width: 780px;
+  }
+
+  &.-w680 {
+    width: 680px;
+  }
 }
 
 .A_CraftBodyMapLocation {
@@ -321,11 +333,41 @@
   }
 }
 
-.A_CraftSliderArrows {
+.A_SliderArrows {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.A_SliderImage {
+  width: 880px;
+  height: 520px;
+  overflow: hidden;
+
+  .W_SliderRails {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+
+    position: relative;
+    left: 0;
+
+    transition: all ease 1s;
+  }
+}
+
+.A_SliderDescriptionCounter {
+  width: 110px;
+
+  font-family: 'PP Neue Machina';
+  font-style: italic;
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 25px;
+
+  color: var(--white);
 }
 
 .A_CraftBodyNoteTitle {
