--- a/src/stylesheets/vars.scss
+++ b/src/stylesheets/vars.scss
@@ -1,6 +1,6 @@
 :root {
-  --white: white;
-  --black: black;
+  --white: #f5f5f5;
+  --black: #080808;
   --pink: #ffcfda;
   --green: #037b57;
   --blue: #3b7992;
