--- a/src/stylesheets/components/organisms.scss
+++ b/src/stylesheets/components/organisms.scss
@@ -14,7 +14,11 @@
   // border-bottom: 3px solid;
   // border-color: var(--white);
 
-  background-color: var(--white);
+  background-color: var(--black);
+
+  &.-white {
+    background-color: var(--white);
+  }
 
   z-index: 100;
 }
