--- a/src/stylesheets/vars.scss
+++ b/src/stylesheets/vars.scss
@@ -1,11 +1,14 @@
 :root {
   --white: #f5f5f5;
   --black: #080808;
-  --pink: #ffcfda;
-  --green: #037b57;
-  --blue: #3b7992;
-  --lila: #bca7fa;
+
   --grey: #8a8686;
   --darkgrey: #363636;
   --lightgrey: #6a6a6a;
+
+  --yellow: #f8d277;
+  --pink: #f5a5df;
+  --green: #64c17e;
+  --blue: #3b7992;
+  --lila: #bca7fa;
 }
