--- a/src/stylesheets/basics.scss
+++ b/src/stylesheets/basics.scss
@@ -1,12 +1,12 @@
 body {
-  background-color: var(--black);
+  background-color: var(--white);
 
-  &.-white {
-    background-color: var(--white);
+  &.black {
+    background-color: var(--black);
   }
 }
 
 a {
   text-decoration: none;
-  color: var(--white);
+  color: var(--black);
 }
