--- a/src/stylesheets/components/atoms.scss
+++ b/src/stylesheets/components/atoms.scss
@@ -13,7 +13,7 @@
 
   color: var(--white);
 
-  &.-black {
+  &.black {
     color: var(--black);
   }
 }
@@ -30,10 +30,10 @@
   align-items: center;
   text-align: center;
 
-  color: var(--white);
+  color: var(--black);
 
-  &.-black {
-    color: var(--black);
+  &.white {
+    color: var(--white);
   }
 }
 
@@ -207,6 +207,40 @@
 //
 // Страницы ремёсел
 
+.A_LeadString {
+  font-family: 'PP Neue Machina';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 95px;
+  line-height: 97px;
+
+  color: var(--black);
+}
+
+.A_LeadStringTitle {
+  font-family: 'PP Neue Machina';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 95px;
+  line-height: 97px;
+
+  background-repeat: no-repeat;
+  z-index: 20;
+
+  color: var(--white);
+
+  &.Uelen-bone-carving {
+    width: 1394px;
+    height: 118px;
+    background-image: url('./images/craft/uelen-bone-carving/lead_shape.svg');
+    padding-left: 17px;
+    padding-top: 14px;
+  }
+}
+
+//выше новое
+//ниже старое
+
 .A_CraftLeadTitle {
   font-family: 'PP Neue Machina';
   font-style: normal;
@@ -296,7 +330,7 @@
   font-size: 21px;
   line-height: 27px;
 
-  color: var(--white);
+  color: var(--black);
 }
 
 .A_TagButtonArticle {
@@ -306,14 +340,14 @@
 
   text-align: center;
 
-  color: var(--white);
+  color: var(--black);
 
   box-sizing: border-box;
   padding: 7px 14px 5px;
 
   border: 1px solid;
   border-radius: 14px;
-  border-color: var(--white);
+  border-color: var(--black);
 
   opacity: 0.5;
   transition: 0.2s;
@@ -345,18 +379,55 @@
   }
 }
 
-.A_CraftBodySubtitle {
+.A_CraftBodySubtitle,
+.A_CraftTitle {
+  //new
   font-family: 'PP Neue Machina';
   font-style: normal;
   font-weight: 800;
-  font-size: 32px;
-  line-height: 33px;
+  font-size: 64px;
+  line-height: 66px;
 
-  color: var(--white);
+  color: var(--black);
 
-  &.-Left100 {
-    margin-left: 100px;
+  &.final {
+    font-size: 32px;
+    line-height: 33px;
+
+    &.also {
+      margin-left: 219px;
+    }
+
+    &.see {
+      margin-left: 69px;
+    }
   }
+}
+
+.A_ImageDescriptionStep {
+  //new
+  width: 80px;
+
+  font-family: 'PP Neue Machina';
+  font-style: italic;
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 25px;
+
+  color: var(--black);
+}
+
+.A_ImageDescriptionText {
+  //new
+  font-family: 'PP Neue Montreal';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 21px;
+  line-height: 27px;
+
+  color: var(--black);
+
+  width: 553px;
 }
 
 .A_CraftBodyText {
@@ -364,23 +435,23 @@
   font-style: normal;
   font-weight: 400;
   font-size: 21px;
-  line-height: 27px;
+  line-height: 28px;
 
-  color: var(--white);
+  color: var(--black);
 
-  &.-w580 {
+  &.w580 {
     width: 580px;
   }
 
-  &.-w480 {
+  &.w480 {
     width: 480px;
   }
 
-  &.-w780 {
+  &.w780 {
     width: 780px;
   }
 
-  &.-w680 {
+  &.w680 {
     width: 680px;
   }
 }
@@ -462,7 +533,7 @@
   list-style-type: disc;
   list-style-position: inside;
 
-  color: var(--white);
+  color: var(--black);
 
   &:hover {
     text-decoration: underline;
@@ -481,6 +552,7 @@
   color: var(--white);
 
   max-width: 256px;
+  margin: 0px 12px 8px;
 }
 
 .A_CraftEndTagsSearch {
