--- a/src/stylesheets/components/molecules.scss
+++ b/src/stylesheets/components/molecules.scss
@@ -73,36 +73,36 @@
 //
 // Страницы ремёсел
 
-.M_CraftLeadDescription {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  padding: 0px 0px 21px;
-  gap: 14px;
+// .M_CraftLeadDescription {
+//   display: flex;
+//   flex-direction: row;
+//   align-items: flex-end;
+//   padding: 0px 0px 21px;
+//   gap: 14px;
 
-  .W_CraftLeadDescriptionMap {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    padding: 0px 0px 4px;
+//   .W_CraftLeadDescriptionMap {
+//     display: flex;
+//     flex-direction: row;
+//     align-items: flex-end;
+//     padding: 0px 0px 4px;
 
-    opacity: 0.5;
-    transition: 0.2s;
+//     opacity: 0.5;
+//     transition: 0.2s;
 
-    cursor: pointer;
+//     cursor: pointer;
 
-    &:hover {
-      opacity: 1;
-    }
-  }
+//     &:hover {
+//       opacity: 1;
+//     }
+//   }
 
-  .C_CraftLeadDescriptionTags {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 10px;
-  }
-}
+//   .C_CraftLeadDescriptionTags {
+//     display: flex;
+//     flex-direction: row;
+//     align-items: flex-start;
+//     gap: 10px;
+//   }
+// }
 
 .M_CraftAbout {
   display: flex;
@@ -290,4 +290,91 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 30px;
+}
+
+//crafts
+.M_CraftLeadDescription{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  padding: 0px 0px 21px;
+  gap: 14px;
+
+  .W_CraftLeadDescriptionMap {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    padding: 0px 0px 4px;
+
+    opacity: 0.5;
+    transition: 0.2s;
+
+    cursor: pointer;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  .C_CraftLeadDescriptionTags {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 10px;
+  }
+}
+
+.M_MainImage{
+  display: flex;
+  flex-direction:row;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0px;
+}
+
+.M_AboutText{
+  display: flex;
+  flex-direction: column;
+  padding: 0px;
+  width: 662px;
+  height: 273px;
+  gap: 45px;
+  margin-left: 118px;
+  
+  &.-lm{
+    margin-left: 640px;
+    margin-top: 88px;
+  }
+  &.-tec{
+    margin-left: 0px;
+  }
+}
+.M_TechniqueDescriptionText{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 10px;
+
+  width: 680px;
+  height: 54px;
+
+  
+  .W_TechniqueCounter{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 2px 0px 0px;
+    gap: 6px;
+    margin-top: 5px;
+  }
+
+}
+.M_PhotoSlider{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 80px;
+  overflow: hidden;
 }
