--- a/src/stylesheets/components/organisms.scss
+++ b/src/stylesheets/components/organisms.scss
@@ -309,3 +309,72 @@
   align-items: center;
   gap: 10px;
 }
+
+//crafts
+.O_MainPart{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 58px;
+
+  .W_MainInfo{
+    width: 863px;
+    height: 285px;
+
+    .W_Main{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 0px;
+    }
+  }
+}
+.O_CraftBlockPeculiarity{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  width: 100vw;
+  height: 739px;
+  background: var(--yellow);
+  
+  .C_CraftBodyImage{
+    display: flex;
+    align-content: flex-start;
+    justify-content: flex-start;
+    flex-direction: row;
+  }
+}
+.O_History{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px;
+  gap: 118px;
+  isolation: isolate;
+  width: 1550px;
+  height: 481px;
+}
+.O_Techique{
+  width: 1327px;
+  height: 1773px;
+  .C_TechniqueImage{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 83px;
+    isolation: isolate;
+    .W_TechniqueWithDescription{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 0px;
+      gap: 16px;
+      &.-left500{
+        margin-left: 500px;
+      }
+    }
+  }
+}
