--- a/src/stylesheets/components/superorganisms.scss
+++ b/src/stylesheets/components/superorganisms.scss
@@ -162,3 +162,28 @@
     grid-row-gap: 36px;
   }
 }
+
+//страницы ремесел
+.S_Craft{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 147px;
+
+  .W_CraftsStart{
+    width: 100vw;
+    height: 668px;
+    background: var(--yellow);
+  }
+
+  .W_PhotoSliderGallery{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px;
+    gap: 43px;
+    overflow: hidden;
+  }
+}
